[package]
name = "openmeta"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
http-body-util = "0.1.2"
mockito = "1.7.0"
reqwest = { version = "0.12.12", features = ["json", "blocking"] }
scraper = "0.23.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.0", features = ["full"] }
tower = "0.5.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
